bpo-38525: Fix dictreviter_iternext for empty dict